--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "spread",
   "dependencies": {
     "express": "^5.1.0",
+    "fluent-ffmpeg": "^2.1.3",
     "nodemon": "^3.1.10"
   }
 }
