--- a/package.json
+++ b/package.json
@@ -1,7 +1,11 @@
 {
   "name": "spread",
+  "type": "module",
+  "scripts": {
+    "start": "node src/index.js"
+  },
   "dependencies": {
-    "fluent-ffmpeg": "^2.1.3",
-    "nodemon": "^3.1.10"
+    "dotenv": "^16.5.0",
+    "fluent-ffmpeg": "^2.1.2"
   }
 }
