--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
   },
   "dependencies": {
     "dotenv": "^16.5.0",
-    "fluent-ffmpeg": "^2.1.2"
+    "express": "^5.1.0",
+    "fluent-ffmpeg": "^2.1.2",
+    "node-telegram-bot-api": "^0.66.0"
   }
 }
