--- a/package.json
+++ b/package.json
@@ -6,15 +6,16 @@
     "dev": "nodemon src/index.js"
   },
   "dependencies": {
-    "@supabase/supabase-js": "^2.39.7",
-    "dotenv": "^16.5.0",
-    "express": "^5.1.0",
-    "fluent-ffmpeg": "^2.1.2",
-    "google-auth-library": "^10.1.0",
+    "@google/genai": "^1.37.0",
+    "@supabase/supabase-js": "^2.90.1",
+    "dotenv": "^16.6.1",
+    "express": "^5.2.1",
+    "fluent-ffmpeg": "^2.1.3",
+    "google-auth-library": "^10.5.0",
     "googleapis": "^153.0.0",
     "node-telegram-bot-api": "^0.66.0"
   },
   "devDependencies": {
-    "nodemon": "^3.1.10"
+    "nodemon": "^3.1.11"
   }
 }
