--- a/package.json
+++ b/package.json
@@ -12,8 +12,7 @@
     "express": "^5.2.1",
     "fluent-ffmpeg": "^2.1.3",
     "google-auth-library": "^10.6.1",
-    "googleapis": "^153.0.0",
-    "node-telegram-bot-api": "^0.67.0"
+    "googleapis": "^153.0.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.14"
